# mcp-ffmpeg-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
client/: test.py
ffmpeg_mcp/: __init__.py  mcp.py
scripts/: build_ffmpeg.py
